Implemented Cancel Button on GP and STTP class (in ManageRecurringEventView.java)